# orloj-edice

./: .env.example  .gitignore  README.md  TODO.md  deploy.sh  index.html  marginalia.html  p0001.html  p0002.html  p0003.html  p0004.html  p0005.html  p0006.html  p0007.html  p0008.html  p0009.html  p0010.html  p0011.html  p0012.html  p0013.html  p0014.html  p0015.html  p0016.html  p0017.html  p0018.html  p0019.html  p0020.html  p0021.html  p0022.html  p0023.html  p0024.html  p0025.html  p0026.html  p0027.html  p0028.html  p0029.html  p0030.html  p0031.html  p0032.html  p0033.html  (+49 more)
assets/: edition.css  edition.js
data/: README.md  medailon-mikulas-petr.md  purkmistr_list_1410.txt  purkmistr_list_1410_cz.txt  teige_taborsky.txt
docs/: HANDOVER.md  chybejici-listy.md  hajek-tabule-orloje-1574.md  handoff-identita-pisatelu-CD.md  handoff-indexace-zdroju-orloj.md  transkripce.md
src/transcribus/: __init__.py  cli.py  config.py  pipeline.py  state.py
src/transcribus/processing/: __init__.py  cleanup.py  docling_tables.py  edition.py  edition_content.py  normalize.py  page_xml.py  teige.py  translate.py
src/transcribus/sources/: __init__.py  ahmp.py  base.py  (+1 more)
tests/: test_cleanup.py  test_client.py  test_edition.py  test_page_xml.py  test_state.py  test_zoomify.py
tools/: align_teige_lines.py  build_f3_table.py  build_f61_table.py  build_f66_table.py  build_festa_table.py  collate_1587_1570.py  collate_carchesius_teige.py  reconstruct_titan_table.py  verify_astrolabe_1642.py  verify_computus.py  verify_f54_sunrise.py  verify_f68_epact.py  verify_festa_mobilia.py
(+83 files in other folders)
